# fletnfctest

./: README.md  api.py  bugged.tomll  main.py  mkdocs.yml  ntest.py  pyproject.toml  test.py
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/com/jh/nfc/: MainActivity.java  NfcPlugin.java
docs/: Nfcflet.md  index.md
examples/nfcflet_example/: pyproject.toml
examples/nfcflet_example/client/: .flutter-plugins-dependencies  README.md  pubspec.yaml  pyproject.toml
examples/nfcflet_example/client/.dart_tool/: package_config.json  package_config_subset  package_graph.json
examples/nfcflet_example/client/src/: main.py
examples/nfcflet_example/src/: AndroidManifest.xml  main.py
flet_nfc/: mkdocs.yml
flet_nfc/docs/: FletNfc.md  index.md
flet_nfc/examples/flet_nfc_example/: pyproject.toml
flet_nfc/examples/flet_nfc_example/src/: main.py
flet_nfc/src/flet_nfc/: __init__.py  flet_nfc.py
flet_nfc/src/flutter/flet_nfc/: README.md  pubspec.yaml
flet_nfc/src/flutter/flet_nfc/lib/: flet_nfc.dart  register_plugins.dart
flet_nfc/src/flutter/flet_nfc/lib/src/: create_control.dart  flet_nfc.dart  nfc_reader.dart
flet_nfc_plugin/android/src/: FletNfcPlugin.java
flet_nfc_plugin/flutter/: pubspec.yaml
flet_nfc_plugin/flutter/lib/: flet_nfc.dart
flet_nfc_plugin/src/flet_nfc_plugin/: __init__.py  handler.py
lib/: nfc_channel.dart 
src/: flet_extension.yaml
src/flutter/nfcflet/: README.md  pubspec.yaml
src/flutter/nfcflet/lib/: nfcflet.dart
src/flutter/nfcflet/lib/src/: create_control.dart  nfcflet.dart
src/nfcflet/: __init__.py
src/nfcflet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/python/: setup.py
