# pyproject.toml

[build-system]
requires = ["flit_core >=3.2.0"]
build-backend = "flit_core.buildapi"

[project]
name = "meu_flet_app"
version = "0.1.0"
description = "App Flet Android (arm64-v8a) com NFC, Internet, label e package personalizados"
authors = [
  { name = "Jhonata", email = "jhonatacarneirorios432@gmail.com" }
]
requires-python = ">=3.7"
dependencies = [
  "flet>=0.28.3"
]

[tool.flet.app]
# Display name no launcher do Android
name        = "Teste NFC"

# Arquivo Python que inicia sua UI
main        = "main.py"

# Package name (applicationId) do Android
# Será usado como com.jh.meufletapp
package     = "com.jh.NFCAppTest"

[tool.flet.android]
# divide por ABI mas inclui só arm64-v8a
split_per_abi = true
abi_filters   = ["arm64-v8a"]

# Permissões necessárias
permissions = [
  "android.permission.INTERNET",
  "android.permission.NFC"
]
