[project]
name = "nfcflet-example"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  "nfcflet",
  "flet>=0.28.3",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "nfcflet-example"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by MyCompany"

[tool.flet.android]
manifest = """
<manifest xmlns:android="http://schemas.android.com/apk/res/android"
          package="com.mycompany.nfcflet-example">

  <!-- Permissões e feature NFC -->
  <uses-permission android:name="android.permission.NFC" />
  <uses-feature android:name="android.hardware.nfc" android:required="true" />

  <application>
    <!-- Activity padrão gerada pelo Flet -->
    <activity android:name="io.flet.android.FlutterActivity">
      
      <!-- NFC NDEF tags -->
      <intent-filter>
        <action android:name="android.nfc.action.NDEF_DISCOVERED" />
        <category android:name="android.intent.category.DEFAULT" />
        <data android:mimeType="text/plain" />
      </intent-filter>

    </activity>
  </application>
</manifest>
"""

[tool.flet.app]
path = "./src/"
script = main.py

[tool.flet.dev_packages]
nfcflet = "../.." # relative path

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.uv.sources]
nfcflet = { path = "../../", editable = true }

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
nfcflet = {path = "../../", develop = true}